test/memory/shannon/outofmemory/mallocOutOfMemory.good
mallocOutOfMemory.chpl:1: error: Out of memory allocating "malloc test"
